// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/sbt/extract extractFile() extract deps from native scala file with private variables 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    Object {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "fileReplacePosition": 9,
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.13.0-RC5",
}
`;

exports[`modules/manager/sbt/extract extractFile() extract deps from native scala file with variables 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    Object {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "fileReplacePosition": 9,
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-a",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-a",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-b",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-b",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-c",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-c",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.13.0-RC5",
}
`;

exports[`modules/manager/sbt/extract extractFile() extracts deps for generic use-cases 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "2.9.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    Object {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "fileReplacePosition": 5,
      "packageName": "org.example:foo",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 6,
      "packageName": "org.example:bar_2.9.10",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "fileReplacePosition": 8,
      "packageName": "org.example:baz_2.9.10",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "fileReplacePosition": 9,
      "packageName": "org.example:qux",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "2.13.3",
      "datasource": "sbt-package",
      "depName": "org.scala-lang:scala-library",
      "depType": "sources",
      "fileReplacePosition": 11,
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "fileReplacePosition": 13,
      "packageName": "org.example:quux",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "fileReplacePosition": 20,
      "packageName": "org.example:quuz_2.9.10",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 21,
      "packageName": "org.example:corge",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "editFile": undefined,
      "fileReplacePosition": 17,
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 34,
      "packageName": "org.example:waldo",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://dl.bintray.com/sbt/sbt-plugin-releases",
      ],
    },
    Object {
      "currentValue": "(,8.4.0]",
      "datasource": "sbt-package",
      "depName": "org.example:fred",
      "fileReplacePosition": 36,
      "packageName": "org.example:fred",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
  "packageFileVersion": "1.0",
  "scalaVersion": "2.9.10",
}
`;

exports[`modules/manager/sbt/extract extractFile() extracts deps when scala version is defined in a variable 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "fileReplacePosition": 8,
      "packageName": "org.example:foo",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 9,
      "packageName": "org.example:bar_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "fileReplacePosition": 11,
      "packageName": "org.example:baz_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "fileReplacePosition": 12,
      "packageName": "org.example:qux",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "fileReplacePosition": 15,
      "packageName": "org.example:quux",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "fileReplacePosition": 21,
      "packageName": "org.example:quuz_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 22,
      "packageName": "org.example:corge",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "editFile": undefined,
      "fileReplacePosition": 1,
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 35,
      "packageName": "org.example:waldo",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://dl.bintray.com/sbt/sbt-plugin-releases",
      ],
    },
  ],
  "packageFileVersion": "3.2.1",
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractFile() extracts deps when scala version is defined in a variable with ThisBuild scope 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 3,
      "packageName": "org.example:bar_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractFile() extracts deps when scala version is defined in a variable with a trailing comma 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 5,
      "packageName": "org.example:bar_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractFile() extracts deps when scala version is defined with ThisBuild scope 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 2,
      "packageName": "org.example:bar_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractFile() extracts deps when scala version is defined with a trailing comma 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 4,
      "packageName": "org.example:bar_2.12",
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extract deps from native scala file with private variables 1`] = `
{
  "deps": [
    {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "fileReplacePosition": 9,
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "variableName": "abcVersion",
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.13.0-RC5",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extract deps from native scala file with variables 1`] = `
{
  "deps": [
    {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "fileReplacePosition": 9,
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "variableName": "abcVersion",
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-a",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-a",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "variableName": "abcVersion",
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-b",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-b",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "variableName": "abcVersion",
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-c",
      "editFile": undefined,
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-c",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "variableName": "abcVersion",
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.13.0-RC5",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps for generic use-cases 1`] = `
{
  "deps": [
    {
      "currentValue": "2.9.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "fileReplacePosition": 5,
      "packageName": "org.example:foo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 6,
      "packageName": "org.example:bar_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "fileReplacePosition": 8,
      "packageName": "org.example:baz_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "fileReplacePosition": 9,
      "packageName": "org.example:qux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "2.13.3",
      "datasource": "sbt-package",
      "depName": "org.scala-lang:scala-library",
      "depType": "sources",
      "fileReplacePosition": 11,
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "fileReplacePosition": 13,
      "packageName": "org.example:quux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "fileReplacePosition": 20,
      "packageName": "org.example:quuz_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.42",
      "datasource": "sbt-package",
      "depName": "org.example:abc",
      "depType": "test",
      "packageName": "org.example:abc_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 21,
      "packageName": "org.example:corge",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "editFile": undefined,
      "fileReplacePosition": 17,
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "variableName": "versionExample",
    },
    {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 34,
      "packageName": "org.example:waldo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://repo.scala-sbt.org/scalasbt/sbt-plugin-releases",
      ],
    },
    {
      "currentValue": "(,8.4.0]",
      "datasource": "sbt-package",
      "depName": "org.example:fred",
      "fileReplacePosition": 36,
      "packageName": "org.example:fred",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
  "packageFileVersion": "1.0",
  "scalaVersion": "2.9.10",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "fileReplacePosition": 8,
      "packageName": "org.example:foo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 9,
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "fileReplacePosition": 11,
      "packageName": "org.example:baz_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "fileReplacePosition": 12,
      "packageName": "org.example:qux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "fileReplacePosition": 15,
      "packageName": "org.example:quux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "fileReplacePosition": 21,
      "packageName": "org.example:quuz_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 22,
      "packageName": "org.example:corge",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "editFile": undefined,
      "fileReplacePosition": 1,
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "variableName": "versionExample",
    },
    {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 35,
      "packageName": "org.example:waldo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://repo.scala-sbt.org/scalasbt/sbt-plugin-releases",
      ],
    },
  ],
  "packageFileVersion": "3.2.1",
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable with ThisBuild scope 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 3,
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable with a trailing comma 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 5,
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined with ThisBuild scope 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 2,
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined with a trailing comma 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "fileReplacePosition": 4,
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
  "scalaVersion": "2.12",
}
`;
